# network-monitoring

./: .gitignore  ArchitecturePrompt.md  CMakeLists.txt  README.md
config/: default.conf
include/analysis/: Statistics.hpp
include/cli/: CommandLineInterface.hpp
include/config/: ConfigManager.hpp
include/core/: NetworkMonitor.hpp
include/gui/: BandwidthWidget.hpp  ConnectionsWidget.hpp  FilterDialog.hpp  MainWindow.hpp  PacketsWidget.hpp  StatisticsWidget.hpp
include/protocols/: Packet.hpp
include/storage/: DataStore.hpp
include/utils/: Logger.hpp
src/: CMakeLists.txt  main.cpp
src/analysis/: Statistics.cpp
src/cli/: CommandLineInterface.cpp
src/config/: ConfigManager.cpp
src/core/: NetworkMonitor.cpp
src/gui/: BandwidthWidget.cpp  ConnectionsWidget.cpp  FilterDialog.cpp  MainWindow.cpp  PacketsWidget.cpp  StatisticsWidget.cpp
src/protocols/: Packet.cpp
src/storage/: DataStore.cpp
src/utils/: Logger.cpp
